@@ -3,6 +3,7 @@
 - be more liberal in accepting "iss" values ending with a trailing slash
 - debug printout of id_token payload on validating it
 - avoid complaining about aud/azp matching if there's only one value in the aud array
+- change author's e-mail address
 
 1/19/2014
 - fix registration-endpoint-does-not-exist-in-metadata logic null pointer core dump
